@@ -1,7 +1,20 @@
 libflac_dep = dependency('flac', version: '>= 1.2', required: get_option('flac'))
 libopus_dep = dependency('opus', required: get_option('opus'))
-libvorbis_dep = dependency('vorbis', required: get_option('vorbis'))
-libvorbisidec_dep = dependency('vorbisidec', required: get_option('tremor'))
+
+if get_option('tremor').enabled()
+  # no libvorbis if Tremor was explicitly enabled
+  libvorbis_dep = dependency('', required: false)
+else
+  libvorbis_dep = dependency('vorbis', required: get_option('vorbis'))
+endif
+
+if libvorbis_dep.found()
+  # no Tremor if libvorbis is used
+  libvorbisidec_dep = dependency('', required: false)
+else
+  # attempt to auto-detect Tremor only if libvorbis was disabled or not found
+  libvorbisidec_dep = dependency('vorbisidec', required: get_option('tremor'))
+endif
 
 if get_option('vorbis').enabled() and get_option('tremor').enabled()
 	error('Cannot build both, the Vorbis decoder AND the Tremor (Vorbis fixed-point) decoder')
